[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "pyvimeo>=1.1.2",
]
